--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -12,6 +12,7 @@ body {
     //  }
 }
 
+/***
 div.language-ad-note,
 div.callout-note {
     .admonition-title::before {
@@ -19,11 +20,15 @@ div.callout-note {
         background-image: url(lucide/pencil.svg);
     }
 }
+***/
 
 div.language-ad-tip,
 div.callout-tip {
     .admonition-title::before {
-        content: url(lucide/lightbulb.svg);
+        background-image: url(lucide/pencil.svg);
+        content: ""; /* This is important to reset the content of the pseudo-element */
+        width: 1em; /* You may need to set the width and height of the pseudo-element to match the size of the image */
+        height: 1em;
     }
 }
 
