--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -25,8 +25,8 @@ div.language-ad-tip,
 div.callout-tip {
     .admonition-title::before {
         background-image: url(https://github.com/Pabce/many-stupid-notes/blob/main/src/site/styles/lucide/accessibility.svg);
-        content: ""; /* This is important to reset the content of the pseudo-element */
-        width: 10em; /* You may need to set the width and height of the pseudo-element to match the size of the image */
+        content: ""; 
+        width: 10em;
         height: 10em;
     }
 }
