--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -12,6 +12,12 @@ body {
     //  }
 }
 
+.markdown-preview-view pre.mermaid {
+    background: white;
+    border-radius: 25px;
+    padding: 10px;
+}
+
 /***
 div.language-ad-note,
 div.callout-note {
