--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .markdown-preview-view pre.mermaid {
-    background: black;
+    //background: black;
     border-radius: 25px;
     padding: 10px;
 }
