--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -6,12 +6,8 @@
         securityLevel: 'loose',
         'theme': 'base',
         'themeVariables': {
-          'primaryColor': '#BB2528',
-          'primaryTextColor': '#fff',
-          'primaryBorderColor': '#7C0000',
-          'lineColor': '#F8B229',
-          'secondaryColor': '#006100',
-          'tertiaryColor': '#fff'
+          'background': var(--background-primary)
+        }
     });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js" integrity="sha512-hpZ5pDCF2bRCweL5WoA0/N1elet1KYL5mx3LP555Eg/0ZguaHawxNvEjF6O3rufAChs16HVNhEc6blF/rZoowQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
