--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -6,7 +6,8 @@
         securityLevel: 'loose',
         'theme': 'base',
         'themeVariables': {
-          'background': var(--background-primary)
+          'background': var(--background-primary),
+          'darkMode': true
         }
     });
 </script>
