--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -7,7 +7,8 @@
         'theme': 'base',
         'themeVariables': {
           'background': var(--background-primary),
-          'darkMode': true
+          'darkMode': 'true',
+          'fontSize': '123px'
         }
     });
 </script>
