--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -4,11 +4,7 @@
     mermaid.initialize({
         startOnLoad: true,
         securityLevel: 'loose',
-        'theme': 'base',
-        'themeVariables': {
-          'background': var(--background-primary),
-          'darkMode': 'true',
-          'fontSize': '123px'
+        'theme': 'dark'
         }
     });
 </script>
