--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -4,7 +4,10 @@
     mermaid.initialize({
         startOnLoad: true,
         securityLevel: 'loose',
-        'theme': 'dark'
+        theme: 'base',
+        themeVariables: {
+            darkMode: true,
+            fontSize: '123px'
         }
     });
 </script>
