--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -6,8 +6,7 @@
         securityLevel: 'loose',
         theme: 'base',
         themeVariables: {
-            darkMode: true,
-            fontSize: '123px'
+            darkMode: 'true'
         }
     });
 </script>
