--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -6,7 +6,8 @@
         securityLevel: 'loose',
         theme: 'base',
         themeVariables: {
-            darkMode: 'true'
+            darkMode: 'true',
+            background: var(--background-primary)
         }
     });
 </script>
