--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -6,7 +6,7 @@
         securityLevel: 'loose',
         theme: 'base',
         themeVariables: {
-            darkMode: true,
+            darkMode: false,
             background: var(--background-primary)
         }
     });
