--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -19,11 +19,11 @@ body {
 }
 
 
-div.language-ad-tip::before,
-div.callout-tip::before {
-  content: "\e900";
-  font-family: "Lucide Icons";
-  font-style: normal;
+div.language-ad-tip,
+div.callout-tip {
+    .admonition-title::before {
+        content: <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>;
+    }
 }
 
 /***
