--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -3,6 +3,7 @@
   <head>
     <title>{{ noteTitle }}</title>
     {%include "components/pageheader.njk"%}
+    <script src="https://unpkg.com/lucide@latest"></script>
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section">
     {%include "components/notegrowthhistory.njk"%}
