--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -3,9 +3,16 @@
   <head>
     <title>{{ noteTitle }}</title>
     {%include "components/pageheader.njk"%}
-    <script src="https://unpkg.com/lucide@latest"></script>
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section">
+    <i icon-name="volume-2" class="my-class"></i>
+    <i icon-name="x"></i>
+    <i icon-name="menu"></i>
+
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      lucide.createIcons();
+    </script>
     {%include "components/notegrowthhistory.njk"%}
     {% if settings.dgShowFileTree !== true %}
       {%include "components/navbar.njk"%}
