--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,6 +10,7 @@ body {
     //  h1 {
     //   color: black;
     //  }
+    --callout-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-3);
 }
 
 .markdown-preview-view pre.mermaid {
