--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,6 +10,8 @@ body {
     //  h1 {
     //   color: black;
     //  }
+    --callout-border-width: 50px;
+    --callout-border-opacity: 0.95;
     --callout-padding: 0 0 0 0;
 }
 
