--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -14,7 +14,8 @@ body {
 }
 
 .admonition-title {
-    font-size: 1.0rem;
+  font-size: 1.0rem;
+  font-weight: bold;
 }
 
 div[class*="language-ad-"] .admonition-title::before,
