--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -39,6 +39,7 @@ div[class*="callout-"] {
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
     white-space: normal !important;
+    margin-bottom: -1rem;
 }
 
 
