--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -32,7 +32,7 @@ div[class*="callout-"] {
     border-radius: 6px;
     display: block;
     font-size: 1rem;
-    margin-top: 0rem;
+    margin-top: 0rem !important;
     outline-color: rgb(230, 230, 230);
     padding: 1rem;
     position: relative;
