--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -20,7 +20,7 @@ body {
 
 div[class*="language-ad-"] .admonition-title::before,
 div[class*="callout-"] .admonition-title::before {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-bottom: 10px;
     margin-right: 10px;
 }
@@ -34,7 +34,8 @@ div[class*="callout-"] {
     font-size: 1rem;
     margin-top: 1rem;
     outline-color: rgb(230, 230, 230);
-    padding: 0.5rem;
+    padding: 1rem;
+    padding-left: 3rem;
     position: relative;
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
