--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -35,7 +35,7 @@ div[class*="callout-"] {
     margin-top: 1rem;
     outline-color: rgb(230, 230, 230);
     padding: 1rem;
-    padding-left: 3rem;
+    padding-bottom: -3rem;
     position: relative;
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
