--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -52,7 +52,8 @@ div[class*="callout-"] {
 
 div.language-ad-todo,
 div.callout-todo {
-    background-color: rgba(0, 184, 212, .3)
+    // background-color: rgba(0, 184, 212, .3)
+    background-color: var(--callout-color);
 }
 
 /***
