--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -63,7 +63,7 @@ div.callout-todo {
 div.language-ad-todo,
 div.callout-todo {
     background-color: rgba(0, 184, 212, .3);
-    font-color: rgba(200, 104, 112, 1);
+    color: rgba(200, 104, 112, 1);
 }
 
 /***
