--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -50,19 +50,18 @@ div[class*="callout-"] {
 }
 
 
+$ccolor: #ff0000;
 div.language-ad-todo,
 div.callout-todo {
-  --ccolor: #ff0000;
-
   .admonition-title::before {
     content: '☑️';
   }
   
   .admonition-title {
-    color: rgba(red(var(--ccolor)), green(var(--ccolor)), blue(var(--ccolor)), 1);
+    color: rgba($ccolor, 1);
   }
   
-  background-color: rgba(red(var(--ccolor)), green(var(--ccolor)), blue(var(--ccolor)), 0.3);
+  background-color: rgba($ccolor, 0.3);
 }
 
 /***
