--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -30,7 +30,8 @@ div[class*="callout-"] {
     font-family: 'Roboto', sans-serif;
     word-wrap: break-word;
     border-radius: 6px;
-    display: block;
+    display: flex;
+    flex-direction: column;
     font-size: 1rem;
     margin-top: 1rem;
     outline-color: rgb(230, 230, 230);
@@ -40,7 +41,12 @@ div[class*="callout-"] {
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
     white-space: normal !important;
+
+    &:empty {
+        min-height: 1rem;
+    }
 }
+
 
 
 .markdown-preview-view pre.mermaid {
