--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -40,8 +40,10 @@ div[class*="callout-"] {
     word-break: break-word;
     white-space: normal !important;
 
-    &:has(p) {
-        padding-bottom: 10rem;
+    &:empty {
+        &:has(p) {
+            padding-bottom: 10rem;
+        }
     }
 }
 
