--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -30,7 +30,7 @@ div[class*="callout-"] {
     font-family: 'Roboto', sans-serif;
     word-wrap: break-word;
     border-radius: 6px;
-    display: flex;
+    display: block;
     font-size: 1rem;
     margin-top: 1rem;
     outline-color: rgb(230, 230, 230);
@@ -39,7 +39,14 @@ div[class*="callout-"] {
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
     white-space: normal !important;
-
+    
+    .p {
+        display: block;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        }
 }
 
 
