--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -42,7 +42,9 @@ div[class*="callout-"] {
 }
 
 div[class*="language-ad-"]:empty,
-div[class*="callout-"]:empty {
+div[class*="callout-"]:empty,
+div[class*="language-ad-"]:blank,
+div[class*="callout-"]:blank {
     p {
         display: contents;
         margin-block-start: 0em;
@@ -51,6 +53,7 @@ div[class*="callout-"]:empty {
         margin-inline-end: 0px;
     }
 }
+
 
 
 .markdown-preview-view pre.mermaid {
