--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -39,13 +39,9 @@ div[class*="callout-"] {
     transition: height .5s ease-in, opacity .5s ease-in;
     word-break: break-word;
     white-space: normal !important;
-}
-
-div[class*="language-ad-"]:empty,
-div[class*="callout-"]:empty,
-div[class*="language-ad-"]:blank,
-div[class*="callout-"]:blank {
-    p {
+    
+    p:empty,
+    p:blank {
         display: contents;
         margin-block-start: 0em;
         margin-block-end: 0em;
@@ -53,8 +49,6 @@ div[class*="callout-"]:blank {
         margin-inline-end: 0px;
     }
 }
-
-
 
 .markdown-preview-view pre.mermaid {
     background: var(--background-primary);
