--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -40,8 +40,7 @@ div[class*="callout-"] {
     word-break: break-word;
     white-space: normal !important;
     
-    p:empty,
-    p:blank {
+    p {
         display: contents;
         margin-block-start: 0em;
         margin-block-end: 0em;
