--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -31,5 +31,17 @@
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
+    
+    const paragraphs = document.querySelectorAll("div[class*='language-ad-'] p, div[class*='callout-'] p");
+    paragraphs.forEach(p => {
+      if (p.textContent.trim().length > 0) {
+        p.style.display = "contents";
+        p.style.marginBlockStart = "0em";
+        p.style.marginBlockEnd = "0em";
+        p.style.marginInlineStart = "0px";
+        p.style.marginInlineEnd = "0px";
+      }
+    });
+    
     </body>
   </html>
