--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -33,7 +33,7 @@
     {% endif %}
     
     <script>
-      const paragraphs = document.querySelectorAll("div[class*='language-ad-'] p, div[class*='callout-'] p");
+      const paragraphs = document.querySelectorAll("div[class*='language-ad-'] .p, div[class*='callout-'] .p");
       paragraphs.forEach(p => {
         if (p.textContent.trim().length > 0) {
           p.style.display = "contents";
