--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -33,12 +33,13 @@
     {% endif %}
     
     <script>
-      const paragraphs = document.querySelectorAll("div[class*='language-ad-'] .p, div[class*='callout-'] .p");
+      const paragraphs = document.querySelectorAll("div[class*='language-ad-'] p, div[class*='callout-'] p");
       paragraphs.forEach(p => {
+        console.log("pppppp");
         if (p.textContent.trim().length > 0) {
           p.style.display = "contents";
-          p.style.marginBlockStart = "0em";
-          p.style.marginBlockEnd = "0em";
+          p.style.marginBlockStart = "10em";
+          p.style.marginBlockEnd = "10em";
           p.style.marginInlineStart = "0px";
           p.style.marginInlineEnd = "0px";
         }
