--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -53,8 +53,17 @@ div.callout-todo {
   $ccolor: rgb(4, 122, 255);
     
   .admonition-title::before {
+    // Add svg image as content
     content: "";
-    background: '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>';
+    background-image: url(activity.svg);
+    background-size: 1.2rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.2rem;
+    height: 1.2rem;
+    display: inline-block;
+    margin-right: 10px;
+
   }
   
   .admonition-title {
