New attemp to add lucide icon

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -54,7 +54,9 @@ div.callout-todo {
     
   .admonition-title::before {
     // Add svg image as content
-    content: url('activity.svg');
+    content: " ";
+    background-image: url('activity.svg');
+    background-size: 1.5rem;
   }
   
   .admonition-title {
