New attemp to add lucide icon

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -54,10 +54,7 @@ div.callout-todo {
     
   .admonition-title::before {
     // Add svg image as content
-    display: block;
-    content: " ";
-    background-image: url('activity.svg');
-    background-size: 1.5rem;
+    content: "<img src = 'activity.svg' alt='My Happy SVG'/>"
   }
   
   .admonition-title {
