New attemp to add lucide icon

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -57,7 +57,7 @@ div.callout-todo {
     display: inline-block;
     width: 24px; /* same as the width of the SVG */
     height: 24px; /* same as the height of the SVG */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='22 12 18 12 15 21 9 3 6 12 2 12'%3E%3C/polyline%3E%3C/svg%3E");
+    background-image: url(~lucide-static/icons/home.svg);
     background-size: 24px 24px;
     background-position: center;
     background-repeat: no-repeat;
