New attemp to add lucide icon

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -55,16 +55,16 @@ div.callout-todo {
   $ccolor: rgb(4, 122, 255);
     
   .admonition-title::before {
-    content: "  ";
+    content: "";
     display: inline-block;
-    background-image: url(u.svg-encode(u.$svg-2));
+    //background-image: url(u.svg-encode(u.$svg-1));
     background-size: 1.5rem;
     background-repeat: no-repeat;
     background-position: center;
-    width: 1.5rem;
+    width: 1.3rem;
     height: 1.5rem;
     margin-right: 0.5rem;
-    
+
   }
   
   .admonition-title {
