--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -5,14 +5,8 @@ body {
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
-    //  background-color: white;
-    //  .content {
-    //   font-size: 14px;
-    //  }
-    //  h1 {
-    //   color: black;
-    //  }
-
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .markdown-preview-view pre.mermaid {
